# AetherForge-FMS-Factory-Mobility-System-Server

./: Cargo.toml  README.md  concept.md  schema.sql
common/: Cargo.toml
common/src/: types.rs  utils.rs
operator-platform/: Cargo.toml  config.rs  main.rs
operator-platform/api/: annotations.rs  auth.rs  camera.rs  mod.rs  models.rs  system.rs  training.rs
operator-platform/models/: annotation.rs  camera.rs  mod.rs  model.rs  system.rs  training_job.rs  user.rs
operator-platform/services/: annotation_service.rs  camera_monitor.rs  camera_service.rs  mod.rs  model_service.rs  system_service.rs  training_service.rs
operator-platform/storage/: database.rs  file_storage.rs  mod.rs
perception-node/: Cargo.toml
perception-node/src/: config.rs  error.rs  main.rs
perception-node/src/camera/: gstreamer.rs  mod.rs  multi_camera.rs
perception-node/src/inference/: mod.rs  ort_engine.rs
perception-node/src/messaging/: mod.rs  zmq_pub.rs
simulator/: Cargo.toml
simulator/src/: main.rs  main2.rs
