[workspace]
members = [
    "perception-node",
    "operator-platform", 
    "common",
    "simulator"
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }