[package]
name = "aetherforge-operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aetherforge-operator"
path = "src/main.rs"

[dependencies]
aetherforge-common = { path = "../common" }
actix-web = "4.0"
actix-cors = "0.6"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.14"
jsonwebtoken = "8.0"
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-stream = "0.3"
mime = "0.3"
multer = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
csv = "1.1"
async-trait = "0.1"

[dev-dependencies]
actix-rt = "2.0"