[package]
name = "aetherforge-perception"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aetherforge-perception"
path = "src/main.rs"

[dependencies]
aetherforge-common = { path = "../common" }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
ort = { version = "2.0"}
zmq = "0.10"
redis = { version = "0.22", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
gstreamer = { version = "0.22", features = ["v1_22"] }
gstreamer-app = "0.22"
gstreamer-video = "0.22"
ndarray = "0.15"
image = "0.24"
once_cell = "1.10"
lazy_static = "1.4"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
serde_yaml = "0.9"
crossbeam = "0.8"
rayon = "1.5"
dashmap = "5.4"
sysinfo = "0.27"
prometheus = { version = "0.13", features = ["process"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-stream = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[features]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
openvino = ["ort/openvino"]